# ChatPyPI

./: 404.html  CHANGELOG.md  README.en.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml
docs/: index.en.md  index.md
index.en/: index.html
search/: search_index.json
src/chatpypi/: __init__.py  cli.py  config.py  main.py  session_ops.py
tests/: conftest.py  test_cli.py  test_session_ops.py  test_version.py
tests/cli-tests/pypi/: test_chatpypi_basic.md  test_chatpypi_basic.py  test_chatpypi_probe.md  test_chatpypi_probe.py
tests/mock-cli-tests/client/: test_chatpypi_shortcut_basic.md  test_chatpypi_shortcut_basic.py
tests/mock-cli-tests/pypi/: test_chatpypi_init_interactive.md  test_chatpypi_init_interactive.py
